<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr_bg_toolbar_lg"
    tools:context=".ui.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_signup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_alignParentTop="true"
        android:background="@color/clr_bg_toolbar_lg">
        <ImageView
            android:id="@+id/btn_ivback_su"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:background="@color/clr_bg_toolbar_lg"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_signup"
        android:layout_above="@+id/footer_sgu">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/ic_sgu_boy"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/ic_boy"/>
            <TextView
                android:id="@+id/tv_sgu_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingStart="@dimen/_50sdp"
                android:paddingEnd="@dimen/_50sdp"
                android:text="@string/txt_desc_sgu"
                android:textSize="@dimen/_11ssp"
                android:textAlignment="center"/>
            <EditText
                android:id="@+id/et_sgu_uname"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:background="@drawable/bg_custom_input"
                android:drawableEnd="@drawable/ic_et_fname"
                android:hint="@string/txt_input_fname"
                style="@style/EditText.PoppinsNormal14sp8D92A3"/>
            <EditText
                android:id="@+id/et_sgu_mail"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:drawableEnd="@drawable/ic_et_mail"
                android:background="@drawable/bg_custom_input"
                android:hint="@string/txt_input_mail"
                style="@style/EditText.PoppinsNormal14sp8D92A3"/>
            <EditText
                android:id="@+id/et_sgu_pass"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/bg_custom_input"
                android:drawableEnd="@drawable/ic_et_pass"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:hint="@string/txt_input_pass"
                style="@style/EditText.PoppinsNormal14sp8D92A3"/>
            <EditText
                android:id="@+id/et_sgu_cpass"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_custom_input"
                android:drawableEnd="@drawable/ic_et_pass"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:hint="@string/txt_input_cpass"
                style="@style/EditText.PoppinsNormal14sp8D92A3"/>
            <Button
                android:id="@+id/btn_signup"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:text="@string/txt_signup"
                style="@style/Button.Primary"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/footer_sgu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_footer">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_footer_ask"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/clr_bg_app"/>
            <TextView
                android:id="@+id/tv_sgu_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="@dimen/_4sdp"
                android:paddingEnd="@dimen/_4sdp"
                android:text="@string/txt_signin"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/clr_bg_app"
                android:textStyle="bold"/>
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</RelativeLayout>