<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/clr_bg_app"
    tools:context=".ui.SignInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_signin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_alignParentTop="true"
        android:background="@color/clr_bg_toolbar_lg">
        <ImageView
            android:id="@+id/btn_ivback_si"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:background="@color/clr_bg_toolbar_lg"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer_sgn"
        android:layout_below="@+id/toolbar_signin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ic_sgn_boy"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:src="@drawable/ic_boy" />

            <TextView
                android:id="@+id/tv_sgn_desc"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:text="@string/txt_sgn_desc"
                android:textAlignment="center"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/et_sgn_mail"
                style="@style/EditText.PoppinsNormal14sp8D92A3"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/bg_custom_input"
                android:drawableEnd="@drawable/ic_et_mail"
                android:drawablePadding="5dp"
                android:hint="@string/txt_input_mail"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp" />

            <EditText
                android:id="@+id/et_sgn_pass"
                style="@style/EditText.PoppinsNormal14sp8D92A3"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_custom_input"
                android:drawableEnd="@drawable/ic_et_pass"
                android:drawablePadding="5dp"
                android:hint="@string/txt_input_pass"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <TextView
                android:id="@+id/tv_sgn_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/forgot_password"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:background="@color/teal_200"
                android:text="@string/txt_btn_continue" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/footer_sgn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/bg_footer"
        android:layout_alignParentBottom="true"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_footer_ask"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tv_sgn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="@dimen/_4sdp"
                android:paddingEnd="@dimen/_4sdp"
                android:text="@string/txt_signup"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>