<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr_bg_app"
    tools:context=".ui.FaceLockActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_fl"
        android:background="@color/clr_bg_toolbar_lg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:background="@color/clr_bg_toolbar_lg"/>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_400sdp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_fl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_250sdp"
            android:src="@drawable/ic_image"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/btn_capture"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/txt_btn_capture"
                android:backgroundTint="@color/teal_200"
                style="@style/Button.Secondary"/>
            <Button
                android:id="@+id/button_predict"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/predict"
                android:background="@drawable/shape_rectangle_gradient"
                style="@style/Button.Primary"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_signin"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/txt_signin"
            android:background="@drawable/shape_rectangle_gradient"
            style="@style/Button.Primary"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>